kcp 1.0.9 (released 2022-07-07):
- Add Sinhala translation

kcp 1.0.8 (released 2022-05-12):
- Update gotext dependencies
- Add italian translation

kcp 1.0.7 (releasd 2021-09-13):
- Correct error parsing
- Better format for errors

kcp 1.0.6 (2021-09-08):
- Add danish translation
- Correct version number with epoch

kcp 1.0.5 (released 2021-04-07):
- Typo
- Update Transifex

kcp 1.0.4 (released 2021-03-24):
- Correct missing translations

kcp 1.0.3 (released 2021-03-08):
- Trying to guess the locale if malformed, fallback to en
- Correct panic error on PKGBUILD parsing

kcp 1.0.2 (released 2021-03-04):
- trying to fix the localisation

kcp 1.0.1 (released 2021-02-27):
----------------
- fix the clone url in kcp database
- minor changes in the Makefile.in

kcp 1.0.0 (released 2021-02-27):
--------------------------------

* Common:
	- Complete refactoring of the code
	- Update requirement Go ≥ 1.16
	- Use standard go.mod
	- Add an option to configure kcp/pckcp (system to /etc/kcp/kcp.conf
	  which can be overloaded by user config in $HOME/.config/kcp/kcp.conf)
	- Add the hability to change the language of the CLI (trough an option)

* kcp:
	- Move the database to $HOME/.config/kcp
	- Notice: the old database is incompatible with the new database
	- Add the hability to change the temporary dir (default to /tmp) and the locker file (through options)
	- Add the hability to use a personalized organization (default to KaOS-Community-Packages)
	- Add the hability to customize repos to ignore
	- Add the hability to change the clone method (ssh or https, default to https)
	- Add the hability to use a custom OAuth provider
	- Rewrite the manpage

* pckp:
	- Rewrite the logic of the PKGBUILD parser
	- Add install vs. hook checker
	- Add the hability to change the exceptions per user
	- Add the hability to change the suffix of the new cleaned PKGBUILD
	- Add the hability to use a custom PKGBUILD template
	- Add a manpage

kcp 0.91.0:
-----------
...